@@ -104,242 +104,101 @@
 # - ZWE_configs_storage_mode
 # - ZWE_configs_storage_size
 # - ZWE_configs_storage_vsam_name
-# Optional variables:
+# - ZWE_configs_jvm_* - Any environment variable with this prefix will be passed as a JVM parameter
+#                       Example: ZWE_configs_jvm_Xss=512k becomes -Xss512k
+#                                ZWE_configs_jvm_Dmy_custom_property=value becomes -Dmy.custom.property=value
+#                       Note: Underscores in the property name (after 'D') are converted to dots
 
+# Source common APIML scripts (sets up common variables and functions)
+# JAR file location
 if [ -n "${LAUNCH_COMPONENT}" ]; then
     JAR_FILE="${LAUNCH_COMPONENT}/apiml-lite.jar"
+    . "scripts/apiml-common-scripts.sh"
+    . "scripts/parse_jvm_args.sh"
 else
     JAR_FILE="$(pwd)/bin/apiml-lite.jar"
+    . "$(pwd)/bin/apiml-common-scripts.sh"
+    . "$(pwd)/bin/parse_jvm_args.sh"
 fi
-echo "jar file: "${JAR_FILE}
-# script assumes it's in the apiml component directory and common_lib needs to be relative path
+echo "jar file: ${JAR_FILE}"
 
-if [ -z "${CMMN_LB}" ]; then
-    COMMON_LIB="../apiml-common-lib/bin/BOOT-INF/lib/"
-else
-    COMMON_LIB="${CMMN_LB}"
-fi
-
-# script assumes it's in the apiml component directory and jvm.security.override.properties needs to be relative path
-JVM_SECURITY_PROPERTIES=""
-if [ "${JVM_SECURITY_PROPERTIES_OVERRIDE:-false}" = "true" ]; then
-    JVM_SECURITY_PROPERTIES="-Djava.security.properties=../apiml-common-lib/bin/jvm.security.override.properties"
-fi
-
-if [ -z "${LIBRARY_PATH}" ]; then
-    LIBRARY_PATH="../common-java-lib/bin/"
-fi
-
-add_profile() {
-    new_profile=$1
-    if [ -n "${ZWE_configs_spring_profiles_active}" ]; then
-        ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active},"
-    fi
-    ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active}${new_profile}"
-}
-
-if [ "${ZWE_components_gateway_debug:-${ZWE_configs_debug:-false}}" = "true" ]; then
-    # TODO should this be a merge of the profiles in gateway and discovery (and other modules later added?)
-    if [ -n "${ZWE_configs_spring_profiles_active:-${ZWE_components_gateway_spring_profiles_active:-${ZWE_components_discovery_spring_profiles_active}}}" ]; then
-        ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active:-${ZWE_components_gateway_spring_profiles_active:-${ZWE_components_discovery_spring_profiles_active}}}"
-    fi
-    add_profile "debug"
-fi
-
-if [  "${ZWE_configs_apiml_security_auth_uniqueCookie:-${ZWE_components_gateway_apiml_security_auth_uniqueCookie:-false}}" = "true" ]; then
-    cookieName="apimlAuthenticationToken.${ZWE_zowe_cookieIdentifier}"
-fi
-
-# how to verifyCertificates
-verify_certificates_config=$(echo "${ZWE_zowe_verifyCertificates}" | tr '[:lower:]' '[:upper:]')
-if [ "${verify_certificates_config}" = "DISABLED" ]; then
-  verifySslCertificatesOfServices=false
-elif [ "${verify_certificates_config}" = "NONSTRICT" ]; then
-  verifySslCertificatesOfServices=true
-  nonStrictVerifySslCertificatesOfServices=true
-else
-  # default value is STRICT
-  verifySslCertificatesOfServices=true
-  nonStrictVerifySslCertificatesOfServices=false
-fi
-
-ZOWE_CONSOLE_LOG_CHARSET=UTF-8
+# APIML-lite loader path (includes IRRRacf.jar on z/OS)
 if [ "$(uname)" = "OS/390" ]; then
-    QUICK_START="-Xquickstart"
     APIML_LOADER_PATH=${COMMON_LIB},/usr/include/java_classes/IRRRacf.jar
-
-    JAVA_VERSION=$(${JAVA_HOME}/bin/javap -J-Xms4m -J-Xmx16m -verbose java.lang.String \
-        | grep "major version" \
-        | cut -d " " -f5)
-
-    if [ $JAVA_VERSION -ge 65 ]; then # Java 21
-        ZOWE_CONSOLE_LOG_CHARSET=IBM-1047
-    fi
 else
     APIML_LOADER_PATH=${COMMON_LIB}
 fi
 
-# Check if the directory containing the ZAAS shared JARs was set and append it to the ZAAS loader path
+# Check if the directory containing the shared JARs was set and append it to the loader path
 if [ -n "${ZWE_GATEWAY_SHARED_LIBS}" ]; then
     APIML_LOADER_PATH=${ZWE_GATEWAY_SHARED_LIBS},${APIML_LOADER_PATH}
 fi
 if [ -n "${ZWE_DISCOVERY_SHARED_LIBS}" ]; then
     APIML_LOADER_PATH=${ZWE_DISCOVERY_SHARED_LIBS},${APIML_LOADER_PATH}
 fi
+echo "Setting loader path: ${APIML_LOADER_PATH}"
 
-echo "Setting loader path: "${APIML_LOADER_PATH}
-
-LOGBACK=""
-if [ -n "${ZWE_configs_logging_config}" ]; then
-    LOGBACK="-Dlogging.config=${ZWE_configs_logging_config}"
+# Debug profile
+if [ "${ZWE_components_gateway_debug:-${ZWE_configs_debug:-false}}" = "true" ]; then
+    if [ -n "${ZWE_configs_spring_profiles_active:-${ZWE_components_gateway_spring_profiles_active:-${ZWE_components_discovery_spring_profiles_active}}}" ]; then
+        ZWE_configs_spring_profiles_active="${ZWE_configs_spring_profiles_active:-${ZWE_components_gateway_spring_profiles_active:-${ZWE_components_discovery_spring_profiles_active}}}"
+    fi
+    add_profile "debug"
 fi
 
-ATTLS_SERVER_ENABLED="false"
-ATTLS_CLIENT_ENABLED="false"
-
-if [ "${ZWE_zowe_network_server_tls_attls}" = "true" ]; then
-  ATTLS_SERVER_ENABLED="true"
-fi
-if [ "${ZWE_zowe_network_client_tls_attls}" = "true" ]; then
-  ATTLS_CLIENT_ENABLED="true"
+# Cookie name for unique cookie support
+if [ "${ZWE_configs_apiml_security_auth_uniqueCookie:-${ZWE_components_gateway_apiml_security_auth_uniqueCookie:-false}}" = "true" ]; then
+    cookieName="apimlAuthenticationToken.${ZWE_zowe_cookieIdentifier}"
 fi
 
+# AT-TLS server profile
 if [ "${ATTLS_SERVER_ENABLED}" = "true" ]; then
-  add_profile "attlsServer"
-  ZWE_configs_server_ssl_enabled="false"
-  ZWE_configs_apiml_service_corsEnabled=true
-fi
-
-internalProtocol="https"
-ZWE_DISCOVERY_SERVICES_LIST=${ZWE_DISCOVERY_SERVICES_LIST:-"https://${ZWE_haInstance_hostname:-localhost}:${ZWE_components_discovery_port:-7553}/eureka/"}
-if [ "${ATTLS_CLIENT_ENABLED}" = "true" ]; then
-    add_profile "attlsClient"
-    ZWE_DISCOVERY_SERVICES_LIST=$(echo "${ZWE_DISCOVERY_SERVICES_LIST=}" | sed -e 's|https://|http://|g')
-    internalProtocol=http
+    add_profile "attlsServer"
+    ZWE_configs_server_ssl_enabled="false"
     ZWE_configs_apiml_service_corsEnabled=true
 fi
 
-if [ "${ZWE_configs_server_ssl_enabled:-${ZWE_components_gateway_server_ssl_enabled:-${ZWE_components_discovery_server_ssl_enabled:-true}}}" = "true" -o "$ATTLS_SERVER_ENABLED" = "true" ]; then
+# AT-TLS client profile
+if [ "${ATTLS_CLIENT_ENABLED}" = "true" ]; then
+    add_profile "attlsClient"
+    ZWE_configs_apiml_service_corsEnabled=true
+fi
+
+# External protocol determination
+if [ "${ZWE_configs_server_ssl_enabled:-${ZWE_components_gateway_server_ssl_enabled:-${ZWE_components_discovery_server_ssl_enabled:-true}}}" = "true" ] || [ "$ATTLS_SERVER_ENABLED" = "true" ]; then
     externalProtocol="https"
 else
     externalProtocol="http"
 fi
 
+# VSAM file name for caching
 if [ -n "${ZWE_configs_storage_vsam_name}" ]; then
     VSAM_FILE_NAME=//\'${ZWE_configs_storage_vsam_name:-${ZWE_components_caching_service_storage_vsam_name}}\'
 fi
 
-LIBPATH="$LIBPATH":"/lib"
-LIBPATH="$LIBPATH":"/usr/lib"
-LIBPATH="$LIBPATH":"${JAVA_HOME}/bin"
-LIBPATH="$LIBPATH":"${JAVA_HOME}/bin/classic"
-LIBPATH="$LIBPATH":"${JAVA_HOME}/bin/j9vm"
-LIBPATH="$LIBPATH":"${JAVA_HOME}/lib/s390x/classic"
-LIBPATH="$LIBPATH":"${JAVA_HOME}/lib/s390x/default"
-LIBPATH="$LIBPATH":"${JAVA_HOME}/lib/s390x/j9vm"
-LIBPATH="$LIBPATH":"${LIBRARY_PATH}"
+# External URL
+if [ -n "${externalProtocol}" ] && [ -n "${ZWE_zowe_externalDomains_0}" ] && [ -n "${ZWE_zowe_externalPort}" ]; then
+    EXTERNAL_URL="-Dapiml.service.externalUrl=${externalProtocol}://${ZWE_zowe_externalDomains_0}:${ZWE_zowe_externalPort}"
+fi
 
+# Gateway-specific library path
 if [ -n "${ZWE_GATEWAY_LIBRARY_PATH}" ]; then
     LIBPATH="$LIBPATH":"${ZWE_GATEWAY_LIBRARY_PATH}"
 fi
 
-ADD_OPENS="--add-opens=java.base/java.lang=ALL-UNNAMED
-        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-        --add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED
-        --add-opens=java.base/java.util=ALL-UNNAMED
-        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-        --add-opens=java.base/javax.net.ssl=ALL-UNNAMED
-        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-        --add-opens=java.base/java.io=ALL-UNNAMED"
-
-get_enabled_protocol_limit() {
-    target=$1
-    type=$2
-    default=$3
-    key_component="ZWE_configs_zowe_network_${target}_tls_${type}Tls"
-    value_component=$(eval echo \$$key_component)
-    key_zowe="ZWE_zowe_network_${target}_tls_${type}Tls"
-    value_zowe=$(eval echo \$$key_zowe)
-    enabled_protocol_limit=${value_component:-${value_zowe:-${default}}}
-}
-
-extract_between() {
-    echo "$1" | sed -e "s/.*$2,//" -e "s/$3.*//"
-}
-
-get_enabled_protocol() {
-    target=$1
-    get_enabled_protocol_limit "${target}" "min" "TLSv1.2"
-    enabled_protocols_min=${enabled_protocol_limit}
-    get_enabled_protocol_limit "${target}" "max" "TLSv1.3"
-    enabled_protocols_max=${enabled_protocol_limit}
-
-    if [ "${enabled_protocols_min:-}" = "${enabled_protocols_max:-}" ]; then
-        result="${enabled_protocols_max:-}"
-    elif [ -z "${enabled_protocols_min:-}" ]; then
-        result="${enabled_protocols_max:-}"
-    else
-        enabled_protocols_max=${enabled_protocols_max:-"TLSv1.3"}
-        enabled_protocols=,TLSv1,TLSv1.1,TLSv1.2,TLSv1.3,TLSv1.4,
-        # Extract protocols between min and max (inclusive)
-        result=$(extract_between "$enabled_protocols" "$enabled_protocols_min" "$enabled_protocols_max")
-        result="$enabled_protocols_min,$result$enabled_protocols_max"
-    fi
-}
-
-server_protocol="TLS"
-get_enabled_protocol "server"
-server_enabled_protocols=${result:-"TLSv1.3"}
-server_ciphers=${ZWE_configs_zowe_network_server_tls_ciphers:-${ZWE_components_gateway_zowe_network_server_tls_ciphers:-${ZWE_zowe_network_server_tls_ciphers:-TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_DHE_RSA_WITH_AES_256_GCM_SHA384,TLS_DHE_DSS_WITH_AES_256_GCM_SHA384,TLS_DHE_RSA_WITH_AES_128_GCM_SHA256,TLS_DHE_DSS_WITH_AES_128_GCM_SHA256,TLS_ECDH_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDH_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDH_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDH_RSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_CBC_SHA384,TLS_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_256_CBC_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_128_CBC_SHA,TLS_EMPTY_RENEGOTIATION_INFO_SCSV}}}
-get_enabled_protocol "client"
-client_enabled_protocols=${ZWE_components_gateway_apiml_httpclient_ssl_enabled_protocols:-${result:-${server_enabled_protocols}}}
-client_ciphers=${ZWE_configs_zowe_network_client_tls_ciphers:-${ZWE_components_gateway_zowe_network_client_tls_ciphers:-${ZWE_zowe_network_client_tls_ciphers:-${server_ciphers}}}}
-
-keystore_type="${ZWE_configs_certificate_keystore_type:-${ZWE_zowe_certificate_keystore_type:-PKCS12}}"
-keystore_pass="${ZWE_configs_certificate_keystore_password:-${ZWE_zowe_certificate_keystore_password}}"
-key_alias="${ZWE_configs_certificate_keystore_alias:-${ZWE_zowe_certificate_keystore_alias}}"
-key_pass="${ZWE_configs_certificate_key_password:-${ZWE_zowe_certificate_key_password:-${keystore_pass}}}"
-truststore_type="${ZWE_configs_certificate_truststore_type:-${ZWE_zowe_certificate_truststore_type:-PKCS12}}"
-truststore_pass="${ZWE_configs_certificate_truststore_password:-${ZWE_zowe_certificate_truststore_password}}"
-
-keystore_location="${ZWE_configs_certificate_keystore_file:-${ZWE_zowe_certificate_keystore_file}}"
-truststore_location="${ZWE_configs_certificate_truststore_file:-${ZWE_zowe_certificate_truststore_file}}"
-
-if [ "${keystore_type}" = "JCERACFKS" ]; then
-    keystore_location=$(echo "${keystore_location}" | sed s_safkeyring://_safkeyringjce://_)
-    truststore_location=$(echo "${truststore_location}" | sed s_safkeyring://_safkeyringjce://_)
-elif [ "${keystore_type}" = "JCECCARACFKS" ]; then
-    keystore_location=$(echo "${keystore_location}" | sed s_safkeyring://_safkeyringjcecca://_)
-    truststore_location=$(echo "${truststore_location}" | sed s_safkeyring://_safkeyringjcecca://_)
-elif [ "${keystore_type}" = "JCEHYBRIDRACFKS" ]; then
-    keystore_location=$(echo "${keystore_location}" | sed s_safkeyring://_safkeyringjcehybrid://_)
-    truststore_location=$(echo "${truststore_location}" | sed s_safkeyring://_safkeyringjcehybrid://_)
-fi
-
-if [ "${ATTLS_SERVER_ENABLED}" = "true" -a "${APIML_ATTLS_LOAD_KEYRING:-false}" = "true" ]; then
-  keystore_type=
-  keystore_pass=
-  key_pass=
-  key_alias=
-  keystore_location=
-fi
-
-if [ -n "${ZWE_java_home}" ]; then
-    JAVA_BIN_DIR=${ZWE_java_home}/bin/
-fi
-
 APIML_CODE=AG
-
-SHARED_CLASSES_OPTS="-Xshareclasses:name=apiml_shared_classes,nonfatal"
 _BPXK_AUTOCVT=OFF
 _BPX_JOBNAME=${ZWE_zowe_job_prefix}${APIML_CODE} ${JAVA_BIN_DIR}java \
     -Xms${ZWE_configs_heap_init:-${ZWE_components_gateway_heap_init:-32}}m -Xmx${ZWE_configs_heap_max:-${ZWE_components_gateway_heap_max:-512}}m \
     -XX:+ExitOnOutOfMemoryError \
     ${QUICK_START} \
     ${SHARED_CLASSES_OPTS} \
+    ${JAVA21_CONSOLE_ENCODING} \
     ${ADD_OPENS} \
     ${LOGBACK} \
     ${JVM_SECURITY_PROPERTIES} \
+    ${EXTERNAL_URL} \
+    ${CUSTOM_JVM_OPTS} \
     -Dapiml.cache.storage.location=${ZWE_zowe_workspaceDirectory}/api-mediation/${ZWE_haInstance_id:-localhost} \
     -Dapiml.catalog.customStyle.backgroundColor=${ZWE_components_apicatalog_apiml_catalog_customStyle_backgroundColor:-${ZWE_configs_apiml_catalog_customStyle_backgroundColor:-}} \
     -Dapiml.catalog.customStyle.docLink=${ZWE_components_apicatalog_apiml_catalog_customStyle_docLink:-${ZWE_configs_apiml_catalog_customStyle_docLink:-}} \
@@ -371,6 +230,7 @@ _BPX_JOBNAME=${ZWE_zowe_job_prefix}${APIML_CODE} ${JAVA_BIN_DIR}java \
     -Dapiml.health.protected=${ZWE_components_gateway_apiml_health_protected:-${ZWE_configs_apiml_health_protected:-true}} \
     -Dapiml.httpclient.ssl.enabled-protocols=${client_enabled_protocols} \
     -Dapiml.internal-discovery.port=${ZWE_components_discovery_port:-${ZWE_configs_internal_discovery_port:-7553}} \
+    -Dapiml.internal-discovery.address=${ZWE_configs_internal_discovery_address:-${ZWE_configs_zowe_network_server_listenAddresses_0:-${ZWE_zowe_network_server_listenAddresses_0:-"0.0.0.0"}}} \
     -Dapiml.logs.location=${ZWE_zowe_logDirectory} \
     -Dapiml.security.allowTokenRefresh=${ZWE_components_gateway_apiml_security_allowtokenrefresh:-${ZWE_configs_apiml_security_allowtokenrefresh:-false}} \
     -Dapiml.security.auth.cookieProperties.cookieName=${cookieName:-apimlAuthenticationToken} \
@@ -413,7 +273,6 @@ _BPX_JOBNAME=${ZWE_zowe_job_prefix}${APIML_CODE} ${JAVA_BIN_DIR}java \
     -Dapiml.service.apimlId=${ZWE_components_gateway_apimlId:-${ZWE_configs_apimlId:-}} \
     -Dapiml.service.corsEnabled=${ZWE_components_gateway_apiml_service_corsEnabled:-${ZWE_configs_apiml_service_corsEnabled:-false}} \
     -Dapiml.service.corsAllowedMethods=${ZWE_components_gateway_apiml_service_corsAllowedMethods:-${ZWE_configs_apiml_service_corsAllowedMethods:-GET,HEAD,POST,PATCH,DELETE,PUT,OPTIONS}} \
-    -Dapiml.service.externalUrl="${externalProtocol}://${ZWE_zowe_externalDomains_0}:${ZWE_zowe_externalPort}" \
     -Dapiml.service.forwardClientCertEnabled=${ZWE_components_gateway_apiml_security_x509_enabled:-${ZWE_configs_apiml_security_x509_enabled:-false}} \
     -Dapiml.service.hostname=${ZWE_haInstance_hostname:-localhost} \
     -Dapiml.service.port=${ZWE_components_gateway_port:-${ZWE_configs_port:-7554}} \
